# HNG-13-Stage-3-backend-Telex-A2A-Data-Insight-Agent-

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
src/data_insight_agent/: agent_brain.py  ai_schema.py  analysis.py  config.py  main.py  ollama_client.py  prompt.py  rpc_schema.py  schema.py  utils.py
